--- a/public/index.html
+++ b/public/index.html
@@ -13,11 +13,7 @@
   <link rel="stylesheet" href="styles/main.css">
 
 </head>
-
-<!-- TODO Add a directive to the body element in order to 
-  bootstrap your Angular app. Be sure to use the name 'app' 
-  so that the provided Angular routes function properly. -->
-<body>
+<body ng-app="app">
 
   <div class="grid-container">
 
@@ -34,7 +30,7 @@
       <div class="recipes">
 
         <!-- The ng-view Angular directive is used to tell the Angular router
-              where requested views should be loaded. Removing this directive 
+              where requested views should be loaded. Removing this directive
               will cause routing to not function properly. -->
         <div ng-view></div>
 
@@ -46,10 +42,10 @@
 
   <script src="vendor/angular.js"></script>
   <script src="vendor/angular-route.js"></script>
-  
-  <!-- TODO Add script tags for your JavaScript files here -->
-
+  <script src="scripts/app.js" charset="utf-8"></script>
   <script src="scripts/route-config.js"></script>
+  <script src="scripts/services/data.js" charset="utf-8"></script>
+  <script src="scripts/controllers/main.js" charset="utf-8"></script>
 </body>
 
 </html>
